[package]
name = "fastboot-protocol"
version = "0.2.1"
edition = "2021"
authors = ["Sjoerd Simons <sjoerd@collabora.com>"]
license = "MIT OR Apache-2.0"
description = "Fastboot protocol implementation"
readme = "README.md"
repository = "https://github.com/boardswarm/fastboot-rs"


[dependencies]
bytes = "1.9.0"
futures = "0.3.31"
nusb = { git = "https://github.com/kevinmehall/nusb", rev = "a243514" }
thiserror = "2.0.3"
tracing = "0.1.40"

[dev-dependencies]
android-sparse-image = { path = "../android-sparse-image", version = "0.1.2" }
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
tracing-subscriber = "0.3.18"
